force-app/main/default/objects/Detalle_Factura__c/Detalle_Factura__c.object-meta.xml
<CustomObject>
    <label>Detalle Factura</label>
    <nameField>
        <label>Detalle Factura Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalle Facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>