force-app/main/default/objects/Detalle_Factura__c/fields/Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total__c</fullName>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>