force-app/main/default/objects/Detalle_Factura__c/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <label>Vehiculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>