force-app/main/default/objects/Detalle_Factura__c/fields/Viaje__c.field-meta.xml
<CustomField>
    <fullName>Viaje__c</fullName>
    <label>Viaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>